hphp/test/slow/inout/bad-call-13.php.expectf
Fatal error: `$GLOBALS` variable is removed from the language. Use HH\global functions in %s/bad-call-13.php on line 4
